--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         section {
@@ -61,7 +61,7 @@
                     <button type="button" class="btn btn-secondary pt">Acheter maintenant</button>
                 </div>
                 <div class="col-md-6 col-xl-6 float-end ">
-                    <img src="../assets/images/youtube-premium.png" class="d-md-block d-none " alt="..." >
+                    <img src="./assets/images/youtube-premium.png" class="d-md-block d-none " alt="..." >
                 </div>
             </div>
     </section>
@@ -123,7 +123,7 @@
         <div class="container text-center ">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-xl-4   ">
-                    <img src="../assets/images/youtube-creators.jpg" class=" w-75 " alt="...">
+                    <img src="./assets/images/youtube-creators.jpg" class=" w-75 " alt="...">
                 </div>
                 <div class="col-lg-6 col-xl-6  ">
                     <div class="accordion" id="accordionExample">
