--- a/parties/menu.html
+++ b/parties/menu.html
@@ -43,7 +43,7 @@
         </div>
     </nav>
 </section>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
