--- a/parties/presentation.html
+++ b/parties/presentation.html
@@ -25,7 +25,7 @@
     </div>
 
 </section>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
